--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <title>Hakhakhak</title>
 <!-- Links -->
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="css/main.css">
 <!-- Style -->
 <style></style>
 </head>
@@ -20,12 +20,57 @@
 <div class="container">
 
     <!-- page-header adds space aroundtext and enlarges it. It also adds an underline at the end -->
-    <div class="page-header">
-    <h1>Hakhakhak</h1>
-    </div>
+    <!-- <div class="page-header">
+        <h1>Hakhakhak</h1>
+    </div> -->
+
+    <!-- .navbar-fixed-top, or .navbar-fixed-bottom can be added to keep the nav bar fixed on the screen -->
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+
+          <!-- Button that toggles the navbar on and off on small screens -->
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+
+          <!-- Hides information from screen readers -->
+            <span class="sr-only"></span>
+
+            <!-- Draws 3 bars in navbar button when in small mode -->
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+
+          <!-- You'll have to add padding in your image on the top and right of a few pixels (CSS Styling will break the navbar) -->
+          <div class="imgwrapper">
+              <a class="pull-left" href="#"><img src="resources/logo.png" class="img-responsive" alt="Hakhakhak"></a>
+          </div>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Why<span class="sr-only">(current)</span></a></li>
+            <li><a href="#">How</a></li>
+            <li><a href="#">What</a></li>
+            <li><a href="#">Who</a></li>
+          </ul>
+          <!-- navbar-left will move the search to the left -->
+          <form class="navbar-form navbar-right" role="search">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Search">
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+          </form>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
 
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
