Commit of the version 1 of the website and the mobile application with the medias and the texts

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Hakhakhak</title>
+  <title>Smartixx</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -30,7 +30,7 @@
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
+  <script type="text/javascript" src="css-background-video/build/bower_components/css-background-video.js"></script>
   <!-- Libraries CSS Files -->
   <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
@@ -41,21 +41,23 @@
 
 <body>
 
-    <section class="hero">
-    <div class="container text-center">
-      <div class="row">
-        <div class="col-md-12">
-          <a class="hero-brand" href="index.html" title="Home"><img alt="Bell Logo" src="img/logo.png"></a>
-        </div>
-      </div>
 
+
+    <section id="slide1">
+
+        <div class="text-left">
+          <div>
+            <a href="index.html" title="Home"><img alt="Smartixx Logo" style="width:40vh; height:40vh;" src="media/logo-white-w.svg"></a>
+          </div>
+        </div>
+    <div class="container text-right">
       <div class="col-md-12">
         <h1>
-            Hakhakhak
+            Support New Talents with Smartixx
           </h1>
 
         <p class="tagline">
-          Lorem Ipsum.
+          Discover artists and give them the chance to become popular.
         </p>
         <a class="btn btn-full" href="#why">Book Now</a>
       </div>
@@ -69,9 +71,9 @@
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <a href="index.html"><img src="img/logo-nav.png" alt="" title="" /></a>
+        <a href="index.html"><img src="media/logo-white-w.svg" alt="" title="" /></a>
         <!-- Uncomment below if you prefer to use a text image -->
-        <!--<h1><a href="#hero">Bell</a></h1>-->
+        <!--<h1><a href="#hero">Hacktixx</a></h1>-->
       </div>
 
       <nav id="nav-menu-container">
@@ -84,23 +86,24 @@
       </nav>
     </div>
   </header>
+  <section id="slide2">
 
-
-  <section class="hero">
-  <div class="container text-center">
-    <div class="row">
-      <div class="col-md-12">
-        <a class="hero-brand" href="index.html" title="Home"><img alt="Bell Logo" src="img/logo.png"></a>
+      <div class="text-left">
+        <div>
+          <a href="index.html" title="Home"><img alt="Hacktixx Logo" style="width:40vh; height:40vh;" src="media/logo-white-w.svg"></a>
+        </div>
       </div>
-    </div>
+
+  <div class="container text-right">
+
 
     <div class="col-md-12">
       <h1>
-          Hakhakhak
+          Your Favorite Live Show Always at the Right Price Smartixx
         </h1>
 
       <p class="tagline">
-        Lorem Ipsum.
+        Don't Struggle to buy tickets for an event because it was sold out as soon as it went on sale?
       </p>
       <a class="btn btn-full" href="#why">Book Now</a>
     </div>
@@ -108,21 +111,21 @@
 
   </section>
 
-  <section class="hero">
-  <div class="container text-center">
-    <div class="row">
-      <div class="col-md-12">
-        <a class="hero-brand" href="index.html" title="Home"><img alt="Bell Logo" src="img/logo.png"></a>
-      </div>
-    </div>
+  <section id="slide3">
 
+      <div class="pull-left">
+        <div>
+          <a href="index.html" title="Home"><img alt="Hacktixx Logo" style="width:40vh; height:40vh;" src="media/logo-white-w.svg"></a>
+        </div>
+      </div>
+  <div class="container text-right">
     <div class="col-md-12">
       <h1>
-          Hakhakhak
+          Enjoy in total safety unforgettable Fun, Art & Culture
         </h1>
 
       <p class="tagline">
-        Lorem Ipsum.
+        With Smartixx, We offer you the optimal security during the show.
       </p>
       <a class="btn btn-full" href="#why">Book Now</a>
     </div>
@@ -132,6 +135,7 @@
 
 
   <!-- Required JavaScript Libraries -->
+
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/superfish/hoverIntent.js"></script>
   <script src="lib/superfish/superfish.min.js"></script>
